增加山东财经大学

--- a/show_ranking/style.css
+++ b/show_ranking/style.css
@@ -139,6 +139,23 @@
     background-color: #468847;
 }
 
+.sdufe-AAA {
+    background-color: #ff55ff;
+}
+.sdufe-AA {
+    background-color: #b94a48;
+}
+.sdufe-A {
+    background-color: #f89406;
+}
+.sdufe-B {
+    background-color: #468847;
+}
+.sdufe-C {
+    background-color: #5555ff;
+}
+
+
 .cssci-cssci {
     background-color: #ff55ff;
 }
