--- a/show_ranking/style.css
+++ b/show_ranking/style.css
@@ -31,6 +31,10 @@
     background-color: #b94a48;
 }
 
+.eii-A {
+    background-color: #b94a48;
+}
+
 .swufe-AA {
     background-color: #ff55ff;
 }
