增加了南大、A&HCI等级，熊猫学术、深度学术两个谷歌镜像，支持知网显示英文等级

--- a/show_ranking/style.css
+++ b/show_ranking/style.css
@@ -35,6 +35,10 @@
     background-color: #b94a48;
 }
 
+.ahci-A {
+    background-color: #b94a48;
+}
+
 .swufe-AA {
     background-color: #ff55ff;
 }
@@ -46,6 +50,16 @@
 }
 .swufe-C {
     background-color: #468847;
+}
+
+.nju-S {
+    background-color: #ff55ff;
+}
+.nju-A {
+    background-color: #b94a48;
+}
+.nju-B {
+    background-color: #f89406;
 }
 
 .ruc-AA {
