支持中国科技核心期刊目录

--- a/show_ranking/style.css
+++ b/show_ranking/style.css
@@ -75,6 +75,10 @@
     background-color: #468847;
 }
 
+.zhongguokejihexin-A {
+    background-color: #b94a48;
+}
+
 .swjtu-AAA {
     background-color: #ff55ff;
 }
@@ -118,11 +122,12 @@
     background-color: #f89406;
 }
 
+
 .cscd-kuo {
-    background-color: #b94a48;
+    background-color: #f89406;
 }
 .cscd-he {
-    background-color: #ff55ff;
+    background-color: #b94a48;
 }
 
 .uibe-A {
