支持重庆大学

--- a/show_ranking/style.css
+++ b/show_ranking/style.css
@@ -75,6 +75,16 @@
     background-color: #468847;
 }
 
+.cqu-A {
+    background-color: #b94a48;
+}
+.cqu-B {
+    background-color: #f89406;
+}
+.cqu-C {
+    background-color: #468847;
+}
+
 .zhongguokejihexin-A {
     background-color: #b94a48;
 }
